enterprise-mlops-churn_without_pgdb/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churn-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: churn-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: churn-api-service
                port:
                  number: 80
